       stored. This speeds up adding items to the playlist. (BR 90137)
  ADD: Context-browser shows "Suggested Tracks", utilizing audioscrobbler.
  FIX: Configure does no longer print "Good - Configure has finished" when
       a dependency is missing.
  ADD: Shaded current-track marker in playlist.
  CHG: Internal SQLite upgraded to 3.0.8.

VERSION 1.1.1:
  FIX: Crash when using GStreamer-engine on 64bit. (BR 90869)
  CHG: New splash screen by Nenad Grujicic <mchitman@neobee.net>.
  FIX: Crash when fetching 1 missing cover using the fetch button. (BR 90673)
  REM: Unsupported option "Show Metadata in Playlist".
  ADD: Menubar (optional).
  FIX: GStreamer-engine now resumes playback at correct position.
  ADD: iCandy for Context-Browser: Background gradient and toolbar.
  CHG: Collection-Browser now has a toolbar instead of menubar.
  FIX: With "Title Streaming" disabled GStreamer could not play streams.
  FIX: Osssink is now the default sink for GStreamer. If sink initialization
       fails, a dialog will ask to select another sink.
  FIX: Pausing failed on some systems with GStreamer-engine. (BR 90417)
  FIX: Never scan the same directory twice.
  FIX: Disable CD-burning menu for streams. (BR 90336)
  ADD: Open Cover-Manager from Context-Browser popup-menu and main menu.
  FIX: Made amaroK build with --disable-amazon flag.
  FIX: Docs translations were not installed correctly. (BR 90307)
  FIX: GStreamer-engine refused to play some mp3 files. (BR 90317)

VERSION 1.1:
  FIX: Huge speedup for Context-Browser, makes changing tracks faster.
  ADD: Progress display for Cover-Manager.
  CHG: Systray animation is now optional.
  CHG: Updated included sqlite to 3.0.7 (stable).
  ADD: Tag editor can operate on multiple files (mass tagging).
  FIX: Collection encoding broken for non-latin1 characters. (BR 89747)
  ADD: Popup-menu for cover images in Context-Browser.
  FIX: The first track to play is now random for random-mode. (BR 77055)