@@ -364,7 +364,12 @@ CollectionReader::readTags( const QStringList& entries, std::ofstream& log )
 
             command += m_parent->escapeString( bundle.url().path() ) + "','";
             command += m_parent->escapeString( bundle.url().directory() ) + "',";
+#ifdef __USE_MYSQL
+            //TODO: maybe this could be used for sqlite too?
+            command += "'" + QString::number(QDateTime::currentDateTime().toTime_t()) + "',";
+#else
             command += "strftime('%s', 'now'),";
+#endif
             command += m_parent->escapeString( QString::number( m_parent->albumID( bundle.album().isEmpty() ? i18n( "Unknown" ) : bundle.album(), true, !m_incremental ) ) ) + ",";
             command += m_parent->escapeString( QString::number( m_parent->artistID( artist.isEmpty() ? i18n( "Unknown" ) : artist, true, !m_incremental ) ) ) + ",";
             command += m_parent->escapeString( QString::number( m_parent->genreID( bundle.genre().isEmpty() ? i18n( "Unknown" ) : bundle.genre(), true, !m_incremental ) ) ) + ",'";
@@ -392,7 +397,12 @@ CollectionReader::readTags( const QStringList& entries, std::ofstream& log )
 
             command += m_parent->escapeString( url.path() ) + "','";
             command += m_parent->escapeString( url.directory() ) + "',";
+#ifdef __USE_MYSQL
+            //TODO: maybe this could be used for sqlite too?
+            command += "'" + QString::number(QDateTime::currentDateTime().toTime_t()) + "',";
+#else
             command += "strftime('%s', 'now'),";
+#endif
             command += m_parent->escapeString( QString::number( m_parent->albumID( i18n( "Unknown" ), true, !m_incremental ) ) ) + ",";
             command += m_parent->escapeString( QString::number( m_parent->artistID( artist.isEmpty() ? "Unknown" : artist, true, !m_incremental ) ) ) + ",";
             command += m_parent->escapeString( QString::number( m_parent->genreID( i18n( "Unknown" ), true, !m_incremental ) ) ) + ",'";
@@ -410,7 +420,11 @@ CollectionReader::readTags( const QStringList& entries, std::ofstream& log )
             m_parent->addImageToPath( url.directory(), url.filename(), true );
     }
     // let's lock the database (will block other threads)
+#ifdef __USE_MYSQL
+//    m_parent->execSql( "START TRANSACTION;" );
+#else
 //    m_parent->query( "BEGIN TRANSACTION;" );
+#endif
 
     // remove tables and recreate them (quicker than DELETE FROM)
     if ( !m_incremental )
@@ -429,7 +443,11 @@ CollectionReader::readTags( const QStringList& entries, std::ofstream& log )
 
     // remove temp tables and unlock database
     m_parent->dropTables( true );
+#ifdef __USE_MYSQL
+//    m_parent->execSql( "COMMIT;" );
+#else
 //    m_parent->query( "END TRANSACTION;" );
+#endif
 
     QStringList albums;
     albums = m_parent->albumList();
